# ucpo-waterdata

./: .flake8  .gitignore  .sqlfluff  LICENSE  README.md  check.ipynb  cleanup.ipynb  emoji_log.py  historic_data.ipynb  main.py  pyproject.toml  style_guide.md  test-waterdata.ipynb  waterdata_utils.py
artifacts/: USGS_parameter_codes.tsv  parameter.csv  parameters.csv  site.csv  site_metadata.csv  site_parameter.csv  source.csv  usbr_parameters.csv  usbr_site_parameter.csv  usbr_sites.csv
db/: drop_tables.sql  schema.sql  views.sql
doc/: repo_structure.txt
notebook/: bor_data_capture.ipynb  duckdb_explore.ipynb  historic_data.ipynb  nwis_data_capture.ipynb  site_data.ipynb  test-waterdata.ipynb
scripts/: initial_load.py
sql/: fetch_sites.sql  schema.sql
src/: bor_data_capture.ipynb  main.py  test-waterdata.ipynb
src/database/: connection.py
src/etl/: extractors.py  loaders.py  transformers.py
src/sql/: build_hydrology_duckdb.sql  hydrology_datalake_views.sql
src/utils/: data_loader.py  duckdb_utils.py  execute_sql_script.py  fetch_data.py  logging_config.py  site_list.py  transform_data.py  write_to_datalake.py
